--- a/_posts/2016-01-12-python_scrape_team_salary.html
+++ b/_posts/2016-01-12-python_scrape_team_salary.html
@@ -1,6 +1,6 @@
 ---
 layout: default_notebook
-title:  "CHECK"
+title:  "Using BS4 and Pandas to salaries from BasketballReference"
 date:   2016-01-12 10:46:55 -0500
 ---
 <!DOCTYPE html>
